# SoundBuddy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/soundbuddy-audio/: Cargo.toml
crates/soundbuddy-core/: Cargo.toml
crates/soundbuddy-media/: Cargo.toml
crates/soundbuddy-presets/: Cargo.toml
crates/soundbuddy-volume/: Cargo.toml
frontend/: angular.json  package-lock.json  package.json
scripts/: lint.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
